// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Amazon Q Adapter Skill Output > formats create-spec skill correctly 1`] = `
{
  "content": "# Create Spec Folder

Create a new spec folder for feature development in the platform-appropriate location.

# Create Spec Folder

Create a new spec folder for structured feature development.

## Steps

1. Validate the feature name:
   - Must be in kebab-case format (lowercase letters, numbers, hyphens)
   - Must not be empty
   - Must not contain spaces or special characters

2. Determine the spec location based on current platform:
   - **All platforms**: \`.kiro/specs/{feature-name}/\`

3. Check if a spec folder with the same name already exists:
   - If exists, return an error without modifying existing content
   - Do not overwrite or merge with existing specs

4. Create the spec folder structure:
   - Create the feature directory
   - Create a configuration file for the target platform
   - Initialize empty document placeholders if needed

5. Task format constraint:
   - Any generated \`tasks.md\` content MUST follow the canonical two-group three-level structure.
   - There MUST be exactly two depth-1 groups: \`- [ ] 1. Mandatory — ...\` and \`- [ ]* 2. Optional — ...\`.
   - Under each group, use depth-2 subgroups (\`1.1\`, \`1.2\`, …) and depth-3 leaf tasks (\`1.1.1\`, \`1.1.2\`, …).
   - NEVER start tasks at depth-2 without a depth-1 parent. NEVER add top-level groups beyond \`1.\` and \`2.\`.

## Configuration File

The configuration file should include:
- Generation mode (requirements-first or design-first)
- Platform identifier
- Creation timestamp

## Output

Report the creation results:
- Path to the created spec folder
- Configuration settings applied
- Any warnings or notes

",
  "filename": "create-spec.md",
}
`;

exports[`Amazon Q Adapter Skill Output > formats install-skills skill correctly 1`] = `
{
  "content": "# Install Framework Skills

Install context engineering framework skills into the workspace for the current platform.

# Install Framework Skills

Install context engineering framework skills into the workspace.

## Platform-Specific Installation Paths

Skills are installed to platform-specific directories:
- **Kiro**: \`.kiro/skills/\`
- **Claude Code**: \`.claude/skills/\`
- **Codex**: \`.codex/skills/\` (with \`SKILL.md\` per skill directory)
- **Antigravity**: \`.agent/skills/\`

## Installation Steps

1. Detect the current platform
2. Determine the target skills directory
3. Create the directory if it doesn't exist
4. For each skill to install:
   - Transform the canonical skill to platform format
   - Write the skill file(s) to the target directory
   - Report success or failure

## Skill Format by Platform

- **Kiro**: Single markdown file with front-matter (\`inclusion: auto\`)
- **Claude Code**: Single markdown file
- **Codex**: Directory with \`SKILL.md\` file
- **Antigravity**: Directory with \`SKILL.md\` file

## Conflict Handling

If a skill already exists:
- Without \`force\`: Prompt for confirmation before overwriting
- With \`force\`: Overwrite existing skills

## Output

Report installation results:
- Skills installed successfully
- Skills skipped (already exist)
- Any errors encountered
- Target directory path

",
  "filename": "install-skills.md",
}
`;

exports[`Amazon Q Adapter Skill Output > formats run-task skill correctly 1`] = `
{
  "content": "# Run Task with Tracking

Execute tasks from tasks.md file with automatic progress tracking and status updates.

# Run Task with Tracking

Execute tasks from the tasks.md file with automatic status tracking.

## Task Status Indicators

Tasks use checkbox syntax to indicate status:
- \`[ ]\` - Not started
- \`[~]\` - Queued
- \`[-]\` - In progress
- \`[x]\` - Completed
- \`[!]\` - Failed

## Single Task Execution

1. Locate the tasks.md file in the spec folder
2. Find the task by its identifier
3. Mark the task as in-progress (\`[-]\`)
4. Execute the task according to its description
5. On success: Mark as completed (\`[x]\`)
6. On failure: Mark as failed (\`[!]\`) with error context

## Sequential Task Execution

When running multiple tasks:
1. Identify all incomplete tasks (status \`[ ]\` or \`[~]\`)
2. Execute tasks in order by their identifier
3. Update status for each task as it completes
4. Stop on first failure unless configured otherwise

## Status Update Rules

- Preserve the original task text during status updates
- Use atomic file operations to prevent corruption
- Only modify the checkbox character, not surrounding content
- Handle concurrent updates safely

## Output

Report execution results:
- Task identifier and description
- Previous and new status
- Execution time
- Any errors or warnings

",
  "filename": "run-task.md",
}
`;

exports[`Amazon Q Adapter Skill Output > formats workspace-init skill correctly 1`] = `
{
  "content": "# Initialize Workspace for Platform

Transform workspace structure to work with a target AI coding agent platform while preserving all existing spec content.

# Workspace Initialization

Initialize this workspace for the specified target AI coding agent platform.

## Steps

1. Detect the current platform by checking for platform-specific markers:
   - \`.kiro/\` directory indicates Kiro
   - \`.claude/\` or \`CLAUDE.md\` indicates Claude Code
   - \`.codex/\` or \`AGENTS.md\` indicates Codex
   - \`.agent/\` directory indicates Antigravity

2. Locate existing specs in \`.kiro/specs/\` (unified location for all platforms)

3. Transform the workspace for the target platform:
   - Copy specs to the platform-appropriate location
   - Generate the platform's instructions file if required
   - Preserve all existing spec content without modification

4. Platform-specific setup:
   - **Kiro**: Specs at \`.kiro/specs/\`, no instructions file needed
   - **Claude Code**: Specs at \`.kiro/specs/\`, create \`CLAUDE.md\` with spec references
   - **Codex**: Specs at \`.kiro/specs/\`, create \`AGENTS.md\` with spec references
   - **Antigravity**: Specs at \`.kiro/specs/\`, create \`.agent/rules/specs.md\`

## Output

Report the transformation results including:
- Source and target directories
- Number of files transformed
- Any errors encountered

",
  "filename": "workspace-init.md",
}
`;

exports[`Amazon Q Adapter Skill Output > generates instructions content with no specs 1`] = `
"# SDD Framework

## Project Structure

This project uses structured specs located in \`.kiro/specs/\`.

## Available Specs

- No specs found

## Working with Specs

Rules in \`.amazonq/rules/\` are automatically loaded by Amazon Q Developer.
"
`;

exports[`Amazon Q Adapter Skill Output > generates instructions content with specs 1`] = `
"# SDD Framework

## Project Structure

This project uses structured specs located in \`.kiro/specs/\`.

## Available Specs

- **user-auth**: User authentication feature
- **payments**: Payment processing

## Working with Specs

Rules in \`.amazonq/rules/\` are automatically loaded by Amazon Q Developer.
"
`;

exports[`Antigravity Adapter Skill Output > formats create-spec skill correctly 1`] = `
{
  "directory": "create-spec",
  "files": [
    {
      "content": "# Create Spec Folder

Create a new spec folder for feature development in the platform-appropriate location.

# Create Spec Folder

Create a new spec folder for structured feature development.

## Steps

1. Validate the feature name:
   - Must be in kebab-case format (lowercase letters, numbers, hyphens)
   - Must not be empty
   - Must not contain spaces or special characters

2. Determine the spec location based on current platform:
   - **All platforms**: \`.kiro/specs/{feature-name}/\`

3. Check if a spec folder with the same name already exists:
   - If exists, return an error without modifying existing content
   - Do not overwrite or merge with existing specs

4. Create the spec folder structure:
   - Create the feature directory
   - Create a configuration file for the target platform
   - Initialize empty document placeholders if needed

5. Task format constraint:
   - Any generated \`tasks.md\` content MUST follow the canonical two-group three-level structure.
   - There MUST be exactly two depth-1 groups: \`- [ ] 1. Mandatory — ...\` and \`- [ ]* 2. Optional — ...\`.
   - Under each group, use depth-2 subgroups (\`1.1\`, \`1.2\`, …) and depth-3 leaf tasks (\`1.1.1\`, \`1.1.2\`, …).
   - NEVER start tasks at depth-2 without a depth-1 parent. NEVER add top-level groups beyond \`1.\` and \`2.\`.

## Configuration File

The configuration file should include:
- Generation mode (requirements-first or design-first)
- Platform identifier
- Creation timestamp

## Output

Report the creation results:
- Path to the created spec folder
- Configuration settings applied
- Any warnings or notes

",
      "filename": "SKILL.md",
    },
  ],
}
`;

exports[`Antigravity Adapter Skill Output > formats install-skills skill correctly 1`] = `
{
  "directory": "install-skills",
  "files": [
    {
      "content": "# Install Framework Skills

Install context engineering framework skills into the workspace for the current platform.

# Install Framework Skills

Install context engineering framework skills into the workspace.

## Platform-Specific Installation Paths

Skills are installed to platform-specific directories:
- Kiro - \`.kiro/skills/\`
- Claude Code - \`.claude/skills/\`
- Codex - \`.codex/skills/\` (with \`SKILL.md\` per skill directory)
- Antigravity - \`.agent/skills/\`

## Installation Steps

1. Detect the current platform
2. Determine the target skills directory
3. Create the directory if it doesn't exist
4. For each skill to install:
   - Transform the canonical skill to platform format
   - Write the skill file(s) to the target directory
   - Report success or failure

## Skill Format by Platform

- Kiro - Single markdown file with front-matter (\`inclusion: auto\`)
- Claude Code - Single markdown file
- Codex - Directory with \`SKILL.md\` file
- Antigravity - Directory with \`SKILL.md\` file

## Conflict Handling

If a skill already exists:
- Without \`force\` - Prompt for confirmation before overwriting
- With \`force\` - Overwrite existing skills

## Output

Report installation results:
- Skills installed successfully
- Skills skipped (already exist)
- Any errors encountered
- Target directory path

",
      "filename": "SKILL.md",
    },
  ],
}
`;

exports[`Antigravity Adapter Skill Output > formats run-task skill correctly 1`] = `
{
  "directory": "run-task",
  "files": [
    {
      "content": "# Run Task with Tracking

Execute tasks from tasks.md file with automatic progress tracking and status updates.

# Run Task with Tracking

Execute tasks from the tasks.md file with automatic status tracking.

## Task Status Indicators

Tasks use checkbox syntax to indicate status:
- \`[ ]\` - Not started
- \`[~]\` - Queued
- \`[-]\` - In progress
- \`[x]\` - Completed
- \`[!]\` - Failed

## Single Task Execution

1. Locate the tasks.md file in the spec folder
2. Find the task by its identifier
3. Mark the task as in-progress (\`[-]\`)
4. Execute the task according to its description
5. On success: Mark as completed (\`[x]\`)
6. On failure: Mark as failed (\`[!]\`) with error context

## Sequential Task Execution

When running multiple tasks:
1. Identify all incomplete tasks (status \`[ ]\` or \`[~]\`)
2. Execute tasks in order by their identifier
3. Update status for each task as it completes
4. Stop on first failure unless configured otherwise

## Status Update Rules

- Preserve the original task text during status updates
- Use atomic file operations to prevent corruption
- Only modify the checkbox character, not surrounding content
- Handle concurrent updates safely

## Output

Report execution results:
- Task identifier and description
- Previous and new status
- Execution time
- Any errors or warnings

",
      "filename": "SKILL.md",
    },
  ],
}
`;

exports[`Antigravity Adapter Skill Output > formats workspace-init skill correctly 1`] = `
{
  "directory": "workspace-init",
  "files": [
    {
      "content": "# Initialize Workspace for Platform

Transform workspace structure to work with a target AI coding agent platform while preserving all existing spec content.

# Workspace Initialization

Initialize this workspace for the specified target AI coding agent platform.

## Steps

1. Detect the current platform by checking for platform-specific markers:
   - \`.kiro/\` directory indicates Kiro
   - \`.claude/\` or \`CLAUDE.md\` indicates Claude Code
   - \`.codex/\` or \`AGENTS.md\` indicates Codex
   - \`.agent/\` directory indicates Antigravity

2. Locate existing specs in \`.kiro/specs/\` (unified location for all platforms)

3. Transform the workspace for the target platform:
   - Copy specs to the platform-appropriate location
   - Generate the platform's instructions file if required
   - Preserve all existing spec content without modification

4. Platform-specific setup:
   - Kiro - Specs at \`.kiro/specs/\`, no instructions file needed
   - Claude Code - Specs at \`.kiro/specs/\`, create \`CLAUDE.md\` with spec references
   - Codex - Specs at \`.kiro/specs/\`, create \`AGENTS.md\` with spec references
   - Antigravity - Specs at \`.kiro/specs/\`, create \`.agent/rules/specs.md\`

## Antigravity Specific

When initializing for Antigravity:
- Create \`.agent/rules/specs.md\` for spec instructions
- Skills will be available in \`.agent/skills/\`

## Output

Report the transformation results including:
- Source and target directories
- Number of files transformed
- Any errors encountered

",
      "filename": "SKILL.md",
    },
  ],
}
`;

exports[`Antigravity Adapter Skill Output > generates .agent/rules/specs.md instructions content 1`] = `
"# Specs Instructions

## Project Structure

This project uses structured specs located in \`.kiro/specs/\`.

## Available Specs

- **user-auth**: User authentication feature
- **payments**: Payment processing

## Working with Specs

Use the skills in \`.agent/skills/\` for spec management.
"
`;

exports[`Antigravity Adapter Skill Output > generates specs.md with no specs 1`] = `
"# Specs Instructions

## Project Structure

This project uses structured specs located in \`.kiro/specs/\`.

## Available Specs

- No specs found

## Working with Specs

Use the skills in \`.agent/skills/\` for spec management.
"
`;

exports[`Claude Code Adapter Skill Output > formats create-spec skill correctly 1`] = `
{
  "content": "# Create Spec Folder

Create a new spec folder for feature development in the platform-appropriate location.

## Usage

# Create Spec Folder

Create a new spec folder for structured feature development.

## Steps

1. Validate the feature name:
   - Must be in kebab-case format (lowercase letters, numbers, hyphens)
   - Must not be empty
   - Must not contain spaces or special characters

2. Determine the spec location based on current platform:
   - **All platforms**: \`.kiro/specs/{feature-name}/\`

3. Check if a spec folder with the same name already exists:
   - If exists, return an error without modifying existing content
   - Do not overwrite or merge with existing specs

4. Create the spec folder structure:
   - Create the feature directory
   - Create a configuration file for the target platform
   - Initialize empty document placeholders if needed

5. Task format constraint:
   - Any generated \`tasks.md\` content MUST follow the canonical two-group three-level structure.
   - There MUST be exactly two depth-1 groups: \`- [ ] 1. Mandatory — ...\` and \`- [ ]* 2. Optional — ...\`.
   - Under each group, use depth-2 subgroups (\`1.1\`, \`1.2\`, …) and depth-3 leaf tasks (\`1.1.1\`, \`1.1.2\`, …).
   - NEVER start tasks at depth-2 without a depth-1 parent. NEVER add top-level groups beyond \`1.\` and \`2.\`.

## Configuration File

The configuration file should include:
- Generation mode (requirements-first or design-first)
- Platform identifier
- Creation timestamp

## Output

Report the creation results:
- Path to the created spec folder
- Configuration settings applied
- Any warnings or notes

",
  "filename": "create-spec.md",
}
`;

exports[`Claude Code Adapter Skill Output > formats install-skills skill correctly 1`] = `
{
  "content": "# Install Framework Skills

Install context engineering framework skills into the workspace for the current platform.

## Usage

# Install Framework Skills

Install context engineering framework skills into the workspace.

## Platform-Specific Installation Paths

Skills are installed to platform-specific directories:
- **Kiro**: \`.kiro/skills/\`
- **Claude Code**: \`.claude/skills/\`
- **Codex**: \`.codex/skills/\` (with \`SKILL.md\` per skill directory)
- **Antigravity**: \`.agent/skills/\`

## Installation Steps

1. Detect the current platform
2. Determine the target skills directory
3. Create the directory if it doesn't exist
4. For each skill to install:
   - Transform the canonical skill to platform format
   - Write the skill file(s) to the target directory
   - Report success or failure

## Skill Format by Platform

- **Kiro**: Single markdown file with front-matter (\`inclusion: auto\`)
- **Claude Code**: Single markdown file
- **Codex**: Directory with \`SKILL.md\` file
- **Antigravity**: Directory with \`SKILL.md\` file

## Conflict Handling

If a skill already exists:
- Without \`force\`: Prompt for confirmation before overwriting
- With \`force\`: Overwrite existing skills

## Output

Report installation results:
- Skills installed successfully
- Skills skipped (already exist)
- Any errors encountered
- Target directory path

",
  "filename": "install-skills.md",
}
`;

exports[`Claude Code Adapter Skill Output > formats run-task skill correctly 1`] = `
{
  "content": "# Run Task with Tracking

Execute tasks from tasks.md file with automatic progress tracking and status updates.

## Usage

# Run Task with Tracking

Execute tasks from the tasks.md file with automatic status tracking.

## Task Status Indicators

Tasks use checkbox syntax to indicate status:
- \`[ ]\` - Not started
- \`[~]\` - Queued
- \`[-]\` - In progress
- \`[x]\` - Completed
- \`[!]\` - Failed

## Single Task Execution

1. Locate the tasks.md file in the spec folder
2. Find the task by its identifier
3. Mark the task as in-progress (\`[-]\`)
4. Execute the task according to its description
5. On success: Mark as completed (\`[x]\`)
6. On failure: Mark as failed (\`[!]\`) with error context

## Sequential Task Execution

When running multiple tasks:
1. Identify all incomplete tasks (status \`[ ]\` or \`[~]\`)
2. Execute tasks in order by their identifier
3. Update status for each task as it completes
4. Stop on first failure unless configured otherwise

## Status Update Rules

- Preserve the original task text during status updates
- Use atomic file operations to prevent corruption
- Only modify the checkbox character, not surrounding content
- Handle concurrent updates safely

## Output

Report execution results:
- Task identifier and description
- Previous and new status
- Execution time
- Any errors or warnings

",
  "filename": "run-task.md",
}
`;

exports[`Claude Code Adapter Skill Output > formats workspace-init skill correctly 1`] = `
{
  "content": "# Initialize Workspace for Platform

Transform workspace structure to work with a target AI coding agent platform while preserving all existing spec content.

## Usage

# Workspace Initialization

Initialize this workspace for the specified target AI coding agent platform.

## Steps

1. Detect the current platform by checking for platform-specific markers:
   - \`.kiro/\` directory indicates Kiro
   - \`.claude/\` or \`CLAUDE.md\` indicates Claude Code
   - \`.codex/\` or \`AGENTS.md\` indicates Codex
   - \`.agent/\` directory indicates Antigravity

2. Locate existing specs in \`.kiro/specs/\` (unified location for all platforms)

3. Transform the workspace for the target platform:
   - Copy specs to the platform-appropriate location
   - Generate the platform's instructions file if required
   - Preserve all existing spec content without modification

4. Platform-specific setup:
   - **Kiro**: Specs at \`.kiro/specs/\`, no instructions file needed
   - **Claude Code**: Specs at \`.kiro/specs/\`, create \`CLAUDE.md\` with spec references
   - **Codex**: Specs at \`.kiro/specs/\`, create \`AGENTS.md\` with spec references
   - **Antigravity**: Specs at \`.kiro/specs/\`, create \`.agent/rules/specs.md\`

## Output

Report the transformation results including:
- Source and target directories
- Number of files transformed
- Any errors encountered



## Claude Code Specific

When initializing for Claude Code:
- Create \`CLAUDE.md\` at the project root
- Include references to all specs in the instructions
- Skills will be available in \`.claude/skills/\`
",
  "filename": "workspace-init.md",
}
`;

exports[`Claude Code Adapter Skill Output > generates CLAUDE.md instructions content 1`] = `
"# Project Instructions

## Specs

This project uses structured specs located in \`.kiro/specs/\`.

- **user-auth**: User authentication feature
- **payments**: Payment processing

## Available Skills

Use the skills in \`.claude/skills/\` for spec management.
"
`;

exports[`Claude Code Adapter Skill Output > generates CLAUDE.md with no specs 1`] = `
"# Project Instructions

## Specs

This project uses structured specs located in \`.kiro/specs/\`.

- No specs found

## Available Skills

Use the skills in \`.claude/skills/\` for spec management.
"
`;

exports[`Codex Adapter Skill Output > formats create-spec skill correctly 1`] = `
{
  "directory": "create-spec",
  "files": [
    {
      "content": "# Create Spec Folder

Create a new spec folder for feature development in the platform-appropriate location.

## Instructions

# Create Spec Folder

Create a new spec folder for structured feature development.

## Steps

1. Validate the feature name:
   - Must be in kebab-case format (lowercase letters, numbers, hyphens)
   - Must not be empty
   - Must not contain spaces or special characters

2. Determine the spec location based on current platform:
   - **All platforms**: \`.kiro/specs/{feature-name}/\`

3. Check if a spec folder with the same name already exists:
   - If exists, return an error without modifying existing content
   - Do not overwrite or merge with existing specs

4. Create the spec folder structure:
   - Create the feature directory
   - Create a configuration file for the target platform
   - Initialize empty document placeholders if needed

5. Task format constraint:
   - Any generated \`tasks.md\` content MUST follow the canonical two-group three-level structure.
   - There MUST be exactly two depth-1 groups: \`- [ ] 1. Mandatory — ...\` and \`- [ ]* 2. Optional — ...\`.
   - Under each group, use depth-2 subgroups (\`1.1\`, \`1.2\`, …) and depth-3 leaf tasks (\`1.1.1\`, \`1.1.2\`, …).
   - NEVER start tasks at depth-2 without a depth-1 parent. NEVER add top-level groups beyond \`1.\` and \`2.\`.

## Configuration File

The configuration file should include:
- Generation mode (requirements-first or design-first)
- Platform identifier
- Creation timestamp

## Output

Report the creation results:
- Path to the created spec folder
- Configuration settings applied
- Any warnings or notes

",
      "filename": "SKILL.md",
    },
  ],
}
`;

exports[`Codex Adapter Skill Output > formats install-skills skill correctly 1`] = `
{
  "directory": "install-skills",
  "files": [
    {
      "content": "# Install Framework Skills

Install context engineering framework skills into the workspace for the current platform.

## Instructions

# Install Framework Skills

Install context engineering framework skills into the workspace.

## Platform-Specific Installation Paths

Skills are installed to platform-specific directories:
- **Kiro**: \`.kiro/skills/\`
- **Claude Code**: \`.claude/skills/\`
- **Codex**: \`.codex/skills/\` (with \`SKILL.md\` per skill directory)
- **Antigravity**: \`.agent/skills/\`

## Installation Steps

1. Detect the current platform
2. Determine the target skills directory
3. Create the directory if it doesn't exist
4. For each skill to install:
   - Transform the canonical skill to platform format
   - Write the skill file(s) to the target directory
   - Report success or failure

## Skill Format by Platform

- **Kiro**: Single markdown file with front-matter (\`inclusion: auto\`)
- **Claude Code**: Single markdown file
- **Codex**: Directory with \`SKILL.md\` file
- **Antigravity**: Directory with \`SKILL.md\` file

## Conflict Handling

If a skill already exists:
- Without \`force\`: Prompt for confirmation before overwriting
- With \`force\`: Overwrite existing skills

## Output

Report installation results:
- Skills installed successfully
- Skills skipped (already exist)
- Any errors encountered
- Target directory path



## Codex Specific

When installing skills for Codex:
- Each skill is a directory containing \`SKILL.md\`
- Directory name matches the skill name
- Example: \`.codex/skills/workspace-init/SKILL.md\`
",
      "filename": "SKILL.md",
    },
  ],
}
`;

exports[`Codex Adapter Skill Output > formats run-task skill correctly 1`] = `
{
  "directory": "run-task",
  "files": [
    {
      "content": "# Run Task with Tracking

Execute tasks from tasks.md file with automatic progress tracking and status updates.

## Instructions

# Run Task with Tracking

Execute tasks from the tasks.md file with automatic status tracking.

## Task Status Indicators

Tasks use checkbox syntax to indicate status:
- \`[ ]\` - Not started
- \`[~]\` - Queued
- \`[-]\` - In progress
- \`[x]\` - Completed
- \`[!]\` - Failed

## Single Task Execution

1. Locate the tasks.md file in the spec folder
2. Find the task by its identifier
3. Mark the task as in-progress (\`[-]\`)
4. Execute the task according to its description
5. On success: Mark as completed (\`[x]\`)
6. On failure: Mark as failed (\`[!]\`) with error context

## Sequential Task Execution

When running multiple tasks:
1. Identify all incomplete tasks (status \`[ ]\` or \`[~]\`)
2. Execute tasks in order by their identifier
3. Update status for each task as it completes
4. Stop on first failure unless configured otherwise

## Status Update Rules

- Preserve the original task text during status updates
- Use atomic file operations to prevent corruption
- Only modify the checkbox character, not surrounding content
- Handle concurrent updates safely

## Output

Report execution results:
- Task identifier and description
- Previous and new status
- Execution time
- Any errors or warnings

",
      "filename": "SKILL.md",
    },
  ],
}
`;

exports[`Codex Adapter Skill Output > formats workspace-init skill correctly 1`] = `
{
  "directory": "workspace-init",
  "files": [
    {
      "content": "# Initialize Workspace for Platform

Transform workspace structure to work with a target AI coding agent platform while preserving all existing spec content.

## Instructions

# Workspace Initialization

Initialize this workspace for the specified target AI coding agent platform.

## Steps

1. Detect the current platform by checking for platform-specific markers:
   - \`.kiro/\` directory indicates Kiro
   - \`.claude/\` or \`CLAUDE.md\` indicates Claude Code
   - \`.codex/\` or \`AGENTS.md\` indicates Codex
   - \`.agent/\` directory indicates Antigravity

2. Locate existing specs in \`.kiro/specs/\` (unified location for all platforms)

3. Transform the workspace for the target platform:
   - Copy specs to the platform-appropriate location
   - Generate the platform's instructions file if required
   - Preserve all existing spec content without modification

4. Platform-specific setup:
   - **Kiro**: Specs at \`.kiro/specs/\`, no instructions file needed
   - **Claude Code**: Specs at \`.kiro/specs/\`, create \`CLAUDE.md\` with spec references
   - **Codex**: Specs at \`.kiro/specs/\`, create \`AGENTS.md\` with spec references
   - **Antigravity**: Specs at \`.kiro/specs/\`, create \`.agent/rules/specs.md\`

## Output

Report the transformation results including:
- Source and target directories
- Number of files transformed
- Any errors encountered



## Codex Specific

When initializing for Codex:
- Create \`AGENTS.md\` at the project root
- Each skill requires a directory with \`SKILL.md\`
- Skills will be available in \`.codex/skills/\`
",
      "filename": "SKILL.md",
    },
  ],
}
`;

exports[`Codex Adapter Skill Output > generates AGENTS.md instructions content 1`] = `
"# Agent Instructions

## Project Structure

This project uses structured specs in \`.kiro/specs/\`.

## Skills

Skills are available in \`.codex/skills/\`. Each skill has a SKILL.md file.

## Specs

- user-auth: User authentication feature
- payments: Payment processing
"
`;

exports[`Codex Adapter Skill Output > generates AGENTS.md with no specs 1`] = `
"# Agent Instructions

## Project Structure

This project uses structured specs in \`.kiro/specs/\`.

## Skills

Skills are available in \`.codex/skills/\`. Each skill has a SKILL.md file.

## Specs

- No specs found
"
`;

exports[`Kiro Adapter Skill Output > formats create-spec skill correctly 1`] = `
{
  "content": "---
inclusion: auto
---

# Create Spec Folder

Create a new spec folder for feature development in the platform-appropriate location.

## Instructions

# Create Spec Folder

Create a new spec folder for structured feature development.

## Steps

1. Validate the feature name:
   - Must be in kebab-case format (lowercase letters, numbers, hyphens)
   - Must not be empty
   - Must not contain spaces or special characters

2. Determine the spec location based on current platform:
   - **All platforms**: \`.kiro/specs/{feature-name}/\`

3. Check if a spec folder with the same name already exists:
   - If exists, return an error without modifying existing content
   - Do not overwrite or merge with existing specs

4. Create the spec folder structure:
   - Create the feature directory
   - Create a configuration file for the target platform
   - Initialize empty document placeholders if needed

5. Task format constraint:
   - Any generated \`tasks.md\` content MUST follow the canonical two-group three-level structure.
   - There MUST be exactly two depth-1 groups: \`- [ ] 1. Mandatory — ...\` and \`- [ ]* 2. Optional — ...\`.
   - Under each group, use depth-2 subgroups (\`1.1\`, \`1.2\`, …) and depth-3 leaf tasks (\`1.1.1\`, \`1.1.2\`, …).
   - NEVER start tasks at depth-2 without a depth-1 parent. NEVER add top-level groups beyond \`1.\` and \`2.\`.

## Configuration File

The configuration file should include:
- Generation mode (requirements-first or design-first)
- Platform identifier
- Creation timestamp

## Output

Report the creation results:
- Path to the created spec folder
- Configuration settings applied
- Any warnings or notes



## Kiro Specific

When creating specs on Kiro:
- Location: \`.kiro/specs/{feature-name}/\`
- Config file: \`.config.kiro\`
- Supports both requirements-first and design-first workflows
",
  "filename": "create-spec.md",
}
`;

exports[`Kiro Adapter Skill Output > formats install-skills skill correctly 1`] = `
{
  "content": "---
inclusion: auto
---

# Install Framework Skills

Install context engineering framework skills into the workspace for the current platform.

## Instructions

# Install Framework Skills

Install context engineering framework skills into the workspace.

## Platform-Specific Installation Paths

Skills are installed to platform-specific directories:
- **Kiro**: \`.kiro/skills/\`
- **Claude Code**: \`.claude/skills/\`
- **Codex**: \`.codex/skills/\` (with \`SKILL.md\` per skill directory)
- **Antigravity**: \`.agent/skills/\`

## Installation Steps

1. Detect the current platform
2. Determine the target skills directory
3. Create the directory if it doesn't exist
4. For each skill to install:
   - Transform the canonical skill to platform format
   - Write the skill file(s) to the target directory
   - Report success or failure

## Skill Format by Platform

- **Kiro**: Single markdown file with front-matter (\`inclusion: auto\`)
- **Claude Code**: Single markdown file
- **Codex**: Directory with \`SKILL.md\` file
- **Antigravity**: Directory with \`SKILL.md\` file

## Conflict Handling

If a skill already exists:
- Without \`force\`: Prompt for confirmation before overwriting
- With \`force\`: Overwrite existing skills

## Output

Report installation results:
- Skills installed successfully
- Skills skipped (already exist)
- Any errors encountered
- Target directory path

",
  "filename": "install-skills.md",
}
`;

exports[`Kiro Adapter Skill Output > formats run-task skill correctly 1`] = `
{
  "content": "---
inclusion: auto
---

# Run Task with Tracking

Execute tasks from tasks.md file with automatic progress tracking and status updates.

## Instructions

# Run Task with Tracking

Execute tasks from the tasks.md file with automatic status tracking.

## Task Status Indicators

Tasks use checkbox syntax to indicate status:
- \`[ ]\` - Not started
- \`[~]\` - Queued
- \`[-]\` - In progress
- \`[x]\` - Completed
- \`[!]\` - Failed

## Single Task Execution

1. Locate the tasks.md file in the spec folder
2. Find the task by its identifier
3. Mark the task as in-progress (\`[-]\`)
4. Execute the task according to its description
5. On success: Mark as completed (\`[x]\`)
6. On failure: Mark as failed (\`[!]\`) with error context

## Sequential Task Execution

When running multiple tasks:
1. Identify all incomplete tasks (status \`[ ]\` or \`[~]\`)
2. Execute tasks in order by their identifier
3. Update status for each task as it completes
4. Stop on first failure unless configured otherwise

## Status Update Rules

- Preserve the original task text during status updates
- Use atomic file operations to prevent corruption
- Only modify the checkbox character, not surrounding content
- Handle concurrent updates safely

## Output

Report execution results:
- Task identifier and description
- Previous and new status
- Execution time
- Any errors or warnings

",
  "filename": "run-task.md",
}
`;

exports[`Kiro Adapter Skill Output > formats workspace-init skill correctly 1`] = `
{
  "content": "---
inclusion: auto
---

# Initialize Workspace for Platform

Transform workspace structure to work with a target AI coding agent platform while preserving all existing spec content.

## Instructions

# Workspace Initialization

Initialize this workspace for the specified target AI coding agent platform.

## Steps

1. Detect the current platform by checking for platform-specific markers:
   - \`.kiro/\` directory indicates Kiro
   - \`.claude/\` or \`CLAUDE.md\` indicates Claude Code
   - \`.codex/\` or \`AGENTS.md\` indicates Codex
   - \`.agent/\` directory indicates Antigravity

2. Locate existing specs in \`.kiro/specs/\` (unified location for all platforms)

3. Transform the workspace for the target platform:
   - Copy specs to the platform-appropriate location
   - Generate the platform's instructions file if required
   - Preserve all existing spec content without modification

4. Platform-specific setup:
   - **Kiro**: Specs at \`.kiro/specs/\`, no instructions file needed
   - **Claude Code**: Specs at \`.kiro/specs/\`, create \`CLAUDE.md\` with spec references
   - **Codex**: Specs at \`.kiro/specs/\`, create \`AGENTS.md\` with spec references
   - **Antigravity**: Specs at \`.kiro/specs/\`, create \`.agent/rules/specs.md\`

## Output

Report the transformation results including:
- Source and target directories
- Number of files transformed
- Any errors encountered

",
  "filename": "workspace-init.md",
}
`;

exports[`Kiro Adapter Skill Output > generates empty instructions content (uses steering files) 1`] = `""`;
